--- a/Word Counter [Notebook].ipynb
+++ b/Word Counter [Notebook].ipynb
@@ -5,95 +5,54 @@
    "execution_count": 1,
    "id": "0c9e46b3",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import PyPDF2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1c327805",
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "69609\n"
+      "C:\\Users\\darkb\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:3468: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
-    "# Load in the pdf you want\n",
-    "pdf = PyPDF2.PdfReader(\"Ubik Phillip K Dick.pdf\")\n",
-    "\n",
-    "# for i in range(0, len(pdf.pages)): \n",
-    "#     content = pdf.pages[i].extract_text() \n",
-    "#     count += len(content.split())\n",
-    "\n",
-    "# Declare start and end pages, and initialize the word count varialbe\n",
-    "pageStart = 2\n",
-    "pageEnd = 209\n",
-    "wordCount = 0 \n",
-    "\n",
-    "for i in range(pageStart, pageEnd): \n",
-    "    content = pdf.pages[i].extract_text() \n",
-    "    wordCount += len(content.split()) \n",
-    "\n",
-    "wordCount -= len(pdf.pages)\n",
-    "print(wordCount) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9731718f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(wordCount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c21ea87b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "def wordCounter(pdf,pageStart,pageEnd):\n",
-    "    pdf = PyPDF2.PdfReader(\"The Old Man And The Sea.pdf\")\n",
-    "\n",
-    "    # for i in range(0, len(pdf.pages)): \n",
-    "    #     content = pdf.pages[i].extract_text() \n",
-    "    #     count += len(content.split())\n",
-    "\n",
-    "    # Declare start and end pages, and initialize the word count varialbe\n",
-    "    pageStart = 2\n",
-    "    pageEnd = 96\n",
-    "    wordCount = 0 \n",
-    "\n",
-    "    for i in range(pageStart, pageEnd): \n",
-    "        content = pdf.pages[i].extract_text() \n",
-    "        wordCount += len(content.split()) \n",
-    "\n",
-    "    wordCount -= len(pdf.pages)\n",
-    "    return(wordCount)"
+    "import PyPDF2\n",
+    "import pdfWordCounter as wc\n",
+    "import sys\n",
+    "from PyQt6.QtWidgets import QApplication, QLabel, QWidget, QPushButton, QGridLayout"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173ed8a6",
+   "id": "d743c076-eaf3-499c-8874-d612a85cdcca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the app instance before creating any GUI object\n",
+    "app = QApplication([])\n",
+    "window = QWidget()\n",
+    "window.setWindowTitle(\"PDF Word Counter\")\n",
+    "window.setGeometry(100, 100, 280, 80)\n",
+    "helloMsg = QLabel(\"<h1>Hello, World!</h1>\", parent=window)\n",
+    "helloMsg.move(60, 15)\n",
+    "window.show()\n",
+    "sys.exit(app.exec())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d039df17-21fd-44f8-a670-29e2b385f835",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
